# gymbuddy-backend

./: .env.example  .gitignore  ANVIL_README.md  README.md  TODOS.txt  pyproject.toml  run_local.sh
data/: README.md
jobs/: eval_ntu_baseline.slurm  gym_experiments_2d.slurm  train_ntu_gpu.slurm
scripts/: check_ntu_splits.py  debug_overfit.py  eval_mc_dropout.py  inspect_kinetics.py  make_calibration_plots.py  make_figures.py  run_gating_sweep.py  stress_tests.py  test_loader.py  train_baseline.py  train_finetune_gym.py  train_full_ntu.py  unzip_kinetics.sh
scripts/archive/: debug_labels.py  inspect_dataset.py  inspect_single_pkl.py  test_kinetics.py
scripts/gym_2d/: README.md  analyze_per_class.py  benchmark_latency.py  compare_domains.py  eval_gym.py  evaluate_mc_dropout.py  finetune_gym.py  gym_domain_framing.md  gym_experiments.slurm  plot_training_curves.py  qualitative_analysis.py  run_ablation.py  run_gating_sweep.py
src/gymbuddy/data/loaders/: gym_dataset.py  kinetics_skeleton.py  ntu120.py
src/gymbuddy/models/: baseline.py  transformer.py
src/gymbuddy/uncertainty/: mc_dropout.py
