[project]
name = "gymbuddy"
version = "0.1.0"
description = "AI Gym Buddy"
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = [
    "torch",
    "numpy",
    "pyyaml",
    "wandb",
    "weave",
    "openxlab (>=0.1.3,<0.2.0)",
    "matplotlib (<3.10)"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
